src/yafl_math.h

typedef enum {
    /*Warning flag masks*/
    YAFL_ST_REGULARIZED  = 0x01,
    YAFL_ST_GLITCH_SMALL = 0x02,
    YAFL_ST_GLITCH_LARGE = 0x04,
    YAFL_ST_ANOMALY      = 0x08,
    /*Everything is OK*/
    YAFL_ST_OK           = 0x00,
    /*Warning statuses (see Warning flag masks)*/
    YAFL_ST_R            = 0x01,
    YAFL_ST_S            = 0x02,
    YAFL_ST_SR           = 0x03,
    YAFL_ST_L            = 0x04,
    YAFL_ST_LR           = 0x05,
    YAFL_ST_SL           = 0x06,
    YAFL_ST_SLR          = 0x07,
    YAFL_ST_A            = 0x08,
    YAFL_ST_AR           = 0x09,
    YAFL_ST_SA           = 0x0a,
    YAFL_ST_SAR          = 0x0b,
    YAFL_ST_LA           = 0x0c,
    YAFL_ST_LAR          = 0x0d,
    YAFL_ST_SLA          = 0x0e,
    YAFL_ST_SLAR         = 0x0f,
    /*Error threshold value (greater values are errors)*/
    YAFL_ST_ERR_THR      = 0x100,
    /*Invalid argument numer*/
    YAFL_ST_INV_ARG_1    = 0x100,
    YAFL_ST_INV_ARG_2    = 0x110,
    YAFL_ST_INV_ARG_3    = 0x120,
    YAFL_ST_INV_ARG_4    = 0x130,
    YAFL_ST_INV_ARG_5    = 0x140,
    YAFL_ST_INV_ARG_6    = 0x150,
    YAFL_ST_INV_ARG_7    = 0x160,
    YAFL_ST_INV_ARG_8    = 0x170,
    YAFL_ST_INV_ARG_9    = 0x180,
    YAFL_ST_INV_ARG_10   = 0x190,
    YAFL_ST_INV_ARG_11   = 0x1a0
} yaflStatusEn;